<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewActivity"
            type="com.myapp.osmnavigation.MainActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <fragment
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:defaultNavHost="true"
            app:navGraph="@navigation/v_graph" />

        <Button
            android:id="@+id/myMap"
            android:text="@string/name_button_map"
            android:lines="2"
            android:layout_marginStart="@dimen/margin_button_start_or_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/userAccount"
            android:text="@string/name_button_user_account"
            android:lines="2"
            app:layout_constraintStart_toEndOf="@id/myMap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/aboutInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/aboutInfo"
            android:text="@string/name_about_info"
            android:lines="2"
            android:layout_marginEnd="@dimen/margin_button_start_or_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>