<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewStartAndEndPoint"
            type="com.myapp.osmnavigation.selectsSartingPoint.StartPointAndEndPointViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_parent_layout"
        tools:context=".selectsSartingPoint.StartPointAndEndPointFragment">

        <TextView
            android:id="@+id/tittleStartAndEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tittle_start_end"
            android:lines="3"
            android:text="@string/tittle_start_and_end_fragment"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearStartPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_element"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittleStartAndEnd">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_edit_location_alt_24" />

                <EditText
                    android:id="@+id/editTextStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusedByDefault="false"
                    android:hint="@string/hint_start_or_end_point"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/addLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_baseline_add_location_alt_24" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listStart"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/linearStartPoint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEndPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_element"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearStartPoint"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_edit_location_alt_24" />

                <EditText
                    android:id="@+id/editTextEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusedByDefault="false"
                    android:hint="@string/hint_start_or_end_point"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listEnd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/linearEndPoint" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSendPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_start_end_fragment"
            android:text="@string/button_start"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearEndPoint" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>